// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar with basic theme applied Avatar renders correctly 1`] = `
<View
  activeOpacity={undefined}
  onLongPress={undefined}
  onPress={undefined}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 34,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": 34,
      },
      undefined,
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0,0,0,0.2)",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Avatar with basic theme applied OldAvatar renders correctly 1`] = `
<View
  activeOpacity={undefined}
  onLongPress={undefined}
  onPress={undefined}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 34,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": 34,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0,0,0,0.2)",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Avatar with no theme applied Avatar renders correctly 1`] = `
<View
  activeOpacity={undefined}
  onLongPress={undefined}
  onPress={undefined}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 34,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": 34,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0,0,0,0.2)",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Avatar with no theme applied OldAvatar and Avatar returns the same thing if no theme is applied 1`] = `"[2mCompared values have no visual difference.[22m"`;

exports[`Avatar with no theme applied OldAvatar renders correctly 1`] = `
<View
  activeOpacity={undefined}
  onLongPress={undefined}
  onPress={undefined}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 34,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": 34,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0,0,0,0.2)",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        undefined,
      ]
    }
  />
</View>
`;
